testsuite/tests/typecheck/should_fail/tcfail086.stderr

tcfail086.hs:6:38: error:
    • Can't make a derived instance of ‘Eq Ex’:
        Constructor ‘Ex’ has existential type variables in its type
        Possible fix: use a standalone deriving declaration instead
    • In the data declaration for ‘Ex’
